--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.01
+version=0.02
 
 name=App-chart
 author=Steven Haryanto <stevenharyanto@gmail.com>
@@ -18,4 +18,5 @@ Text::Graph::DataSet=0
 
 ;for bin/chart
 JSON=0
+Perinci::Result::Util=0
 YAML::Syck=0
