Import of SHARYANTO/App-chart-0.03 from CPAN.
gitpan-cpan-distribution: App-chart
gitpan-cpan-version:      0.03
gitpan-cpan-path:         SHARYANTO/App-chart-0.03.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.02
+version=0.03
 
 name=App-chart
 author=Steven Haryanto <stevenharyanto@gmail.com>
@@ -11,12 +11,8 @@ copyright_holder=Steven Haryanto
 [Prereqs]
 perl=5.010001
 
-Moo=0
-SHARYANTO::Role::TermAttrs=0
-Text::Graph=0
-Text::Graph::DataSet=0
-
-;for bin/chart
 JSON=0
 Perinci::Result::Util=0
+TableData::Object=0
+Text::Chart=0
 YAML::Syck=0
